<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#EDE9E9">
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="16sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/data_user"
        android:background="@color/purple"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ukuran_50"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:background="#EDE9E9"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_margin="@dimen/ukuran_16"
        android:id="@+id/btnTambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="@string/tambah"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:layout_margin="@dimen/ukuran_16"
        android:id="@+id/tvEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/data_kosong"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="@dimen/ukuran_16"
        android:id="@+id/listViewNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnSync"
        android:layout_below="@id/btnTambah"
        android:layout_marginTop="@dimen/ukuran_10" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_margin="@dimen/ukuran_16"
        android:id="@+id/btnSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_button_sync"
        android:text="@string/singkronisasi"
        android:textAllCaps="false"
        android:textColor="#2196F3"
        android:visibility="visible" />

</RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>